[package]
name = "unsafety"
version = "0.1.0"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sivadeilra/unsafety"
description = "Provides annotations for describing and auditing usages of `unsafe` code in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
